nextcloud/deployment-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
  namespace: tedy
  labels:
    app: nextcloud-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-db
  template:
    metadata:
      labels:
        app: nextcloud-db
    spec:
      containers:
        - name: nextcloud-db
          image: mariadb:10.5
          resources:
            limits:
              cpu: "100m"
              memory: "300M"
            requests:
              cpu: "50m"
              memory: "150M"
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
            - name: config
              mountPath: /etc/mysql/conf.d
      volumes:
        - name: data
          persistentVolumeClaim:
              claimName: nextcloud-db
        - name: config
          configMap:
              name: nextcloud-db
