nextcloud/deployment-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-nginx
  namespace: tedy
  labels:
    app: nextcloud-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-nginx
  template:
    metadata:
      labels:
        app: nextcloud-nginx
    spec:
      containers:
        - name: nextcloud-nginx
          image: nginx
          resources:
            limits:
              cpu: "500m"
              memory: "100M"
            requests:
              cpu: "100m"
              memory: "50M"
          volumeMounts:
            - name: data
              mountPath: /var/www/html/
            - name: config
              readOnly: true
              mountPath: /etc/nginx/conf.d/
      volumes:
        - name: data
          hostPath:
            path: /media/hddext4/nextcloud
        - name: config
          configMap:
            name: nextcloud-nginx
            items:
            - key: nginx.conf
              path: nginx.conf
