nextcloud/deployment-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-redis
  namespace: tedy
  labels:
    app: nextcloud-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-redis
  template:
    metadata:
      labels:
        app: nextcloud-redis
    spec:
      containers:
        - name: nextcloud-redis
          image: redis:6.0-rc-alpine
          resources:
            limits:
              cpu: "100m"
              memory: "300M"
            requests:
              cpu: "100m"
              memory: "300M"
          ports:
            - containerPort: 6379
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
              claimName: nextcloud-redis
