nextcloud/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: tedy
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:18.0.1-fpm
          ports:
            - containerPort: 9000
          resources:
            limits:
              cpu: "500m"
              memory: "100M"
            requests:
              cpu: "100m"
              memory: "50M"
          volumeMounts:
            - name: data
              mountPath: /var/www/html/
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: amd64
        kubernetes.io/hostname: tedy-desktop-debian
      volumes:
        - name: data
          hostPath:
            path: /media/hddext4/nextcloud
