nextcloud/service-db.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
  namespace: tedy
spec:
  ports:
    - port: 3306
      protocol: TCP
  selector:
    app: nextcloud-db
  type: ClusterIP
