nextcloud/service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-redis
  namespace: tedy
spec:
  ports:
    - port: 6379
      protocol: TCP
  selector:
    app: nextcloud-redis
  type: ClusterIP
