nextcloud/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
  namespace: tedy
spec:
  selector:
    app: nextcloud-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
